--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,5 +37,7 @@ Suggests:
     cowplot (>= 0.9.3),
     knitr,
     rmarkdown
+URL: http://github.com/jnghiem/bfasttools
+BugReports: http://github.com/jnghiem/bfasttools/issues
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
