Added select_MODIS_by_date, updated regex usage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(pcf_calc)
 export(process_PR)
 export(reaggregate_by_function)
 export(sctest_p)
+export(select_MODIS_by_date)
 export(subset_bfast)
 export(summary_plot)
 export(summary_stat)
@@ -49,6 +50,7 @@ importFrom(spatstat,Window)
 importFrom(spatstat,envelope)
 importFrom(spatstat,owin)
 importFrom(spatstat,pcf)
+importFrom(stringr,str_match)
 importFrom(stringr,str_pad)
 importFrom(strucchange,efp)
 importFrom(strucchange,sctest)
