Added generate_MODIS_date function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(bfast_interactive)
 export(create_points)
 export(create_raster)
 export(create_raster_metadata)
+export(generate_MODIS_date)
 export(monthly_date)
 export(pcf_calc)
 export(process_PR)
@@ -37,6 +38,7 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(imputeTS,na.interpolation)
 importFrom(lubridate,month)
+importFrom(lubridate,yday)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(maptools,as.ppp.SpatialPointsDataFrame)
