--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(maptools,as.ppp.SpatialPointsDataFrame)
 importFrom(raster,"%in%")
 importFrom(raster,subset)
 importFrom(rgdal,writeOGR)
+importFrom(rgeos,gIntersection)
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
 importFrom(sp,proj4string)
